--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,17 @@
-.App {
-  text-align: center;
+.wrapper{
+    min-height: 100vh;
+    min-width: 100%;
+    background-color: #005475;
+    overflow: hidden;
+    font-family: 'Montserrat';
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.messages{
+    min-height: 100vh;
+    min-width: 100%;
+    display: grid;
+    grid-template-columns: 0.027fr 1fr;
+    grid-template-rows: 0.023fr 1fr;
+    grid-template-areas:
+    "header header"
+    "block content";
 }
