--- a/src/UI/app/MessagesPage/block/Block.module.css
+++ b/src/UI/app/MessagesPage/block/Block.module.css
@@ -7,6 +7,7 @@
     align-items: center;
     row-gap: 5px;
     box-shadow: 2px 0px 2px 0px rgba(0, 0, 0, 0.25);
+    padding-bottom: 15px;
 }
 .block span{
     font-family: 'Montserrat';
