--- a/src/UI/app/SpeedGoalPage/SpeedGoalContent.module.css
+++ b/src/UI/app/SpeedGoalPage/SpeedGoalContent.module.css
@@ -74,6 +74,7 @@ input[type="search"]::-webkit-input-placeholder {
     font-family: "Montserrat";
     font-size: 12px;
     position: relative;
+    font-weight: 600;
 }
 
 .spanPomoshnik span {
