--- a/src/index.css
+++ b/src/index.css
@@ -24,6 +24,7 @@ html,body{
 	-ms-text-size-adjust: 100%;
 	-moz-text-size-adjust: 100%;
 	-webkit-text-size-adjust: 100%;
+	overflow: hidden;
 }
 input,button,textarea{font-family:inherit;}
 
