--- a/src/UI/app/PolicyPage/NewPolicy.module.css
+++ b/src/UI/app/PolicyPage/NewPolicy.module.css
@@ -82,12 +82,13 @@ input[type="search"]::-webkit-input-placeholder {
 }
 
 .spanPomoshnik::after {
-    content: 'ЦЕЛИ';
+    content: 'Создание новой политики';
     position: absolute;
     left: 0;
     bottom: -15px;
     font-weight: 600;
     font-size: 12px;
+    white-space: nowrap;
 }
 
 .editText {
@@ -99,7 +100,12 @@ input[type="search"]::-webkit-input-placeholder {
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    column-gap: 2%;
+}
+
+.imageButton {
+    display: flex;
+    flex-direction: row;
+    column-gap: 10px;
 }
 
 .one {
@@ -110,53 +116,36 @@ input[type="search"]::-webkit-input-placeholder {
 
 .one img:hover,
 .two img:hover,
+.four img:hover,
 .three img:hover {
     background-color: rgb(240, 240, 240);
     border-radius: 20%;
 }
 
-.select {
-    height: auto;
+.iconSavetmp:hover {
+    background-color: rgb(240, 240, 240);
+    border-radius: 20%;
     cursor: pointer;
 }
 
-.five{
-    display: flex;
-    flex-direction: row;
-    justify-content: end;
-    align-items: center;
-    column-gap: 10%;
-    margin-left: 5%;
-    margin-right: 20px !important;
-}
-.seven{
-    height: 60%;
-    width:20%;
-    display: flex;
-    box-shadow: 0px 0px 1px 0px rgba(0, 0, 0, 0.25);
-    padding-left: 5px;
-}
-.sixth{
-    height: 60%;
-    display: flex;
-    flex-direction: row;
-    box-shadow: 0px 0px 1px 0px rgba(0, 0, 0, 0.25);
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-}
-.iconAdd{
+.blockIconAdd {
     position: relative;
 }
-.iconAdd:hover::after {
-    content: "Создать";
+
+.iconAdd:hover {
+    background-color: rgb(240, 240, 240);
+    border-radius: 20%;
+    cursor: pointer;
+}
+
+.blockIconAdd:hover::after {
+    content: "Создать политику";
     white-space: nowrap;
     position: absolute;
-    width: 80px;
+    width: 120px;
     height: 20px;
     bottom: -120%;
-    left: -120%;
+    left: -170%;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -165,11 +154,10 @@ input[type="search"]::-webkit-input-placeholder {
     border-radius: 10px;
     box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.5);
 }
-
-.iconSave{
+.blockIconSavetmp{
     position: relative;
 }
-.iconSave:hover::after {
+.blockIconSavetmp:hover::after {
     content: "Сохранить";
     white-space: nowrap;
     position: absolute;
@@ -185,49 +173,24 @@ input[type="search"]::-webkit-input-placeholder {
     border-radius: 10px;
     box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.5);
 }
-
-.iconPrint{
-    position: relative;
-}
-.iconPrint:hover::after {
-    content: "Печатать";
-    white-space: nowrap;
-    position: absolute;
-    width: 80px;
-    height: 20px;
-    bottom: -120%;
-    left: -120%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    color: #3A3A3A;
-    background-color: white;
-    border-radius: 10px;
-    box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.5);
-}
-.image:hover {
-    background-color: rgb(240, 240, 240);
-    border-radius: 20%;
-}
-
-.image {
+.select {
     height: auto;
     cursor: pointer;
-    margin-right: 0.5%;
 }
 
 .select:hover {
     background-color: rgb(240, 240, 240);
     border-radius: 20%;
 }
+
 .blockSelect {
     position: relative;
 }
 
-.option{
+.option {
     position: absolute;
     display: none;
-    white-space: nowrap; 
+    white-space: nowrap;
     right: 1%;
     background-color: #ffff;
     box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.5);
@@ -236,32 +199,40 @@ input[type="search"]::-webkit-input-placeholder {
     padding-bottom: 8px;
 }
 
+.option img {
+    margin-right: 10px;
+}
+
 .option li:first-child {
     margin-top: 0px;
-  }
-.option li{
+}
+
+.option li {
     margin-top: 7px;
     position: relative;
     font-family: 'Montserrat';
     font-weight: 400;
     font-size: 12px;
 }
-.option li:hover{
-background-color: rgb(240, 240, 240)
+
+.option li:hover {
+    background-color: rgb(240, 240, 240)
 }
+
 .option li:before {
     content: '';
     position: absolute;
     height: 1px;
-    width: 100%;
+    width: 90%;
     bottom: -4px;
-    left: 0;
+    right: 0;
     background-color: rgb(240, 240, 240);
 }
 
-.blockSelect:hover .option{
+.blockSelect:hover .option {
     display: block;
 }
+
 .two {
     display: flex;
     flex-direction: row;
@@ -277,8 +248,15 @@ background-color: rgb(240, 240, 240)
 }
 
 .four {
+    display: flex;
+    flex-direction: row;
+    cursor: pointer;
+    margin-left: 2%;
+}
+
+.five {
     height: 60%;
-    width: 50%;
+    width: 10%;
     display: flex;
     flex-direction: row;
     box-shadow: 0px 0px 1px 0px rgba(0, 0, 0, 0.25);
@@ -286,13 +264,24 @@ background-color: rgb(240, 240, 240)
     flex-direction: row;
     justify-content: center;
     align-items: center;
-
-    & select{
-        max-width: 300px;
-    }
-   
+    margin-right: 1%;
+    margin-left: 2%;
 }
 
+.sixth {
+    height: 60%;
+    width: 60%;
+    display: flex;
+    flex-direction: row;
+    box-shadow: 0px 0px 1px 0px rgba(0, 0, 0, 0.25);
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
+    margin-right: 1%;
+    margin-left: 1%;
+    column-gap: 5px;
+}
 
 .four span {
     font-weight: 600;
@@ -366,30 +355,105 @@ mark {
     padding: 2px 5px;
     border-radius: 3px;
 }
-.selectImage{
-    margin-right: 5px;
+
+.load {
+    height: 84%;
+    max-height: 80vh;
+    display: flex;
+    flex-direction: column;
+    padding-top: 18%;
+    align-items: center;
+    background-color: #F0F0F0;
+    row-gap: 15px;
 }
 
+.loadImage {
+    width: 33px;
+    height: 33px;
+    animation: rotate 1s linear infinite;
+    /* Анимация вращения */
+}
 
-input[type="search"]:focus {
+.spanLoad {
+    font-weight: 600;
+    font-family: 'Montserrat';
     color: #005475;
-    border-bottom: 1px solid rgb(0, 84, 117);
-}
-input[type="search"]:focus::placeholder {
-    position: absolute;
-    font-style: normal;
-    font-weight: 100;
-    top: -2px;
-    left: 5%;
-    color: #005475;
-    background-image:none;
+    font-size: 14px;
 }
 
-input[type="search"]::-webkit-search-cancel-button {
-    -webkit-appearance: none;
-    cursor: pointer;
-    height: 20px;
-    width: 20px;
-    background-image: url('../../image/iconСlose.svg');
-    background-position: center;
+
+.error {
+    height: 84%;
+    max-height: 80vh;
+    display: flex;
+    flex-direction: column;
+    padding-top: 18%;
+    align-items: center;
+    background-color: #F0F0F0;
+    row-gap: 15px;
+}
+
+
+.errorImage {
+    width: 33px;
+    height: 33px;
+    animation: error 2s ease-in-out infinite;
+    /* Анимация вращения */
+}
+
+.spanError {
+    font-weight: 600;
+    font-family: 'Montserrat';
+    color: red;
+    font-size: 16px;
+}
+
+.success {
+    height: 84%;
+    max-height: 80vh;
+    display: flex;
+    flex-direction: column;
+    padding-top: 18%;
+    align-items: center;
+    background-color: #F0F0F0;
+    row-gap: 15px;
+}
+
+.successImage {
+    animation: error 2s ease-in-out infinite;
+}
+
+.spanSuccess {
+    font-weight: 600;
+    font-family: 'Montserrat';
+    color: #008000;
+}
+
+@keyframes rotate {
+    from {
+        transform: rotate(0deg);
+        /* Начальное положение */
+    }
+
+    to {
+        transform: rotate(360deg);
+        /* Конечное положение */
+    }
+}
+
+@keyframes error {
+    0% {
+        transform: scale(1);
+        /* Исходный размер */
+    }
+
+    50% {
+        transform: scale(1.5);
+        /* Увеличение на 50% */
+    }
+
+    100% {
+        transform: scale(1);
+        /* Возвращение к исходному размеру */
+    }
 }
