--- a/src/UI/Custom/MyEditor.css
+++ b/src/UI/Custom/MyEditor.css
@@ -1,17 +1,29 @@
 .demo-wrapper {
-    border: 1px solid #ccc;
-    padding: 10px;
-  }
-  
-  .demo-editor {
-    background-color: #f0f8ff; /* Смените цвет фона на нужный */
-    padding: 10px;
-    min-height: 300px; /* Высота редактора */
-    color: #000; /* Цвет текста */
-  }
-  
-  .demo-toolbar {
-    border: 1px solid #ccc;
-    margin-bottom: 10px;
-  }
-  
+  border: 1px solid #ccc;
+  padding: 10px;
+}
+
+.demo-editor {
+  background-color: #f0f8ff;
+  /* Смените цвет фона на нужный */
+  padding: 10px;
+  min-height: 300px;
+  /* Высота редактора */
+  color: #000;
+  /* Цвет текста */
+}
+
+.demo-toolbar {
+  border: 1px solid #ccc;
+  margin-bottom: 10px;
+}
+
+.rdw-list-dropdown {
+  width: 50px;
+  z-index: 0;
+}
+
+.rdw-text-align-dropdown {
+  width: 50px;
+  z-index: 0;
+}
