--- a/src/UI/app/PolicyPage/PolicyContent.module.css
+++ b/src/UI/app/PolicyPage/PolicyContent.module.css
@@ -153,9 +153,11 @@ input[type="search"]::-webkit-input-placeholder {
     border-radius: 10px;
     box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.5);
 }
-.blockIconSavetmp{
+
+.blockIconSavetmp {
     position: relative;
 }
+
 .blockIconSavetmp:hover::after {
     content: "Сохранить";
     white-space: nowrap;
@@ -172,6 +174,7 @@ input[type="search"]::-webkit-input-placeholder {
     border-radius: 10px;
     box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.5);
 }
+
 .select {
     height: auto;
     cursor: pointer;
@@ -280,6 +283,7 @@ input[type="search"]::-webkit-input-placeholder {
     margin-right: 1%;
     margin-left: 1%;
     column-gap: 5px;
+    position: relative;
 }
 
 .four span {
@@ -289,6 +293,17 @@ input[type="search"]::-webkit-input-placeholder {
     font-size: 14px;
 }
 
+.policySearch {
+    position: absolute;
+    bottom: -70px;
+    min-height: 60px;
+    padding: 5px 5px;
+    width: 200px;
+    background-color: rgb(255, 255, 255);
+    overflow: visible;
+    box-shadow: 0px 0px 8px 0px rgba(0, 0, 0, 0.25);
+    border-radius: 4px;
+}
 
 .main {
     height: 84%;
@@ -344,16 +359,7 @@ textarea::placeholder {
     font-size: 14px;
 }
 
-mark {
-    background-color: lightblue;
-    color: black;
-}
 
-.highlight {
-    background-color: yellow;
-    padding: 2px 5px;
-    border-radius: 3px;
-}
 
 .load {
     height: 84%;
@@ -404,6 +410,57 @@ mark {
     font-family: 'Montserrat';
     color: red;
     font-size: 16px;
+}
+
+.listUL {
+    display: flex;
+    flex-direction: row;
+    justify-content: start;
+    align-items: center;
+    cursor: pointer;
+    position: relative;
+    column-gap: 10px;
+}
+
+.listULElement {
+    display: none;
+    max-height: 300px;
+    min-width: 150px;
+    max-width: 300px;
+    overflow: auto;
+    position: absolute;
+    left: 180px;
+    top: 0;
+    margin: 0;
+    list-style: none;  
+    z-index: 100;
+    padding-left: 20px;
+    /* box-shadow: 0px 0px 8px 0px rgba(0, 0, 0, 0.25);
+    border-radius: 40px; */
+    & li {
+        padding: 5px;
+        cursor: pointer;
+        width: 100%;
+        background-color: white;
+        &:hover {
+            background-color: rgb(240, 240, 240)
+        }
+    }
+}
+
+.policySearchItem:hover .listULElement {
+    display: block;
+}
+
+.policySearchItem {
+    position: relative;
+}
+
+.listText{
+    font-weight: 600;
+    font-family: 'Montserrat';
+    color: #3A3A3A;
+    font-size: 12px;
 }
 
 @keyframes rotate {
