--- a/src/UI/app/PolicyPage/PolicyContent.module.css
+++ b/src/UI/app/PolicyPage/PolicyContent.module.css
@@ -306,11 +306,10 @@ input[type="search"]::-webkit-input-placeholder {
 }
 
 .main {
+    position: relative;
     height: 84%;
     max-height: 80vh;
     overflow-y: auto;
-    /* scrollbar-width: thin;
-    scrollbar-color: #005475 #FFFFFF; */
     background-color: #F0F0F0;
     padding-top: 1%;
     padding-bottom: 1%;
