--- a/src/UI/app/GoalPage/GoalContent.module.css
+++ b/src/UI/app/GoalPage/GoalContent.module.css
@@ -303,11 +303,10 @@ background-color: rgb(240, 240, 240)
 
 
 .main {
+    position: relative;
     height: 84%;
     max-height: 80vh;
     overflow-y: auto;
-    /* scrollbar-width: thin;
-    scrollbar-color: #005475 #FFFFFF; */
     background-color: #F0F0F0;
     padding-top: 1%;
     padding-bottom: 1%;
