--- a/src/UI/app/SpeedGoalPage/SpeedGoalContent.module.css
+++ b/src/UI/app/SpeedGoalPage/SpeedGoalContent.module.css
@@ -98,7 +98,7 @@ input[type="search"]::-webkit-input-placeholder {
     background-color: #ffff;
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: end;
     align-items: center;
 }
 
@@ -151,10 +151,12 @@ input[type="search"]::-webkit-input-placeholder {
     font-family: 'Montserrat';
     font-weight: 400;
     font-size: 12px;
+    z-index: 10000;
 }
 
 .option li:hover {
-    background-color: rgb(240, 240, 240)
+    background-color: rgb(240, 240, 240);
+    z-index: 10000;
 }
 
 .option li:before {
@@ -165,10 +167,12 @@ input[type="search"]::-webkit-input-placeholder {
     bottom: -4px;
     left: 0;
     background-color: rgb(240, 240, 240);
+    z-index: 10000;
 }
 
 .blockSelect:hover .option {
     display: block;
+    z-index: 10000;
 }
 
 .two {
@@ -185,11 +189,6 @@ input[type="search"]::-webkit-input-placeholder {
     margin-left: 2%;
 }
 
-.empty {
-    height: 60%;
-    width: 55%;
-}
-
 .date {
     height: 60%;
     min-width: 30%;
@@ -203,13 +202,21 @@ input[type="search"]::-webkit-input-placeholder {
     margin-right: 1%;
     margin-left: 2%;
 }
+.image:hover {
+    background-color: rgb(240, 240, 240);
+    border-radius: 20%;
+}
 
+.image {
+    height: auto;
+    cursor: pointer;
+    margin-right: 0.5%;
+}
 .main {
+    position: relative;
     height: 78%;
     max-height: 80vh;
     overflow-y: auto;
-    /* scrollbar-width: thin;
-    scrollbar-color: #005475 #FFFFFF; */
     background-color: #F0F0F0;
     padding-top: 1%;
     padding-bottom: 1%;
@@ -218,7 +225,61 @@ input[type="search"]::-webkit-input-placeholder {
     align-items: center;
     row-gap: 1%;
 }
+.editorContainer {
+    margin-top: 20px;
+    position: relative; /* Это позволит дочернему элементу быть позиционированным относительно этого контейнера */
+    margin-bottom: 16px; /* Расстояние между редакторами */
+  }
+  
+  .deleteIcon {
+    position: absolute; /* Позиционируем элемент абсолютно */
+    top: -25px; /* Расстояние от верхней части контейнера */
+    right: -30px; /* Расстояние от правой части контейнера */
+    cursor: pointer; /* Изменяем курсор при наведении на иконку */
+  }
+  .iconAdd{
+    position: relative;
+    z-index: 10000;
+}
+.iconAdd:hover::after {
+    z-index: 10000;
+    content: "Создать";
+    white-space: nowrap;
+    position: absolute;
+    width: 80px;
+    height: 20px;
+    bottom: -120%;
+    left: -120%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #3A3A3A;
+    background-color: white;
+    border-radius: 10px;
+    box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.5);
+}
 
+.iconSave{
+    position: relative;
+    z-index: 10000;
+}
+.iconSave:hover::after {
+    z-index: 10000;
+    content: "Сохранить";
+    white-space: nowrap;
+    position: absolute;
+    width: 80px;
+    height: 20px;
+    bottom: -120%;
+    left: -120%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #3A3A3A;
+    background-color: white;
+    border-radius: 10px;
+    box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.5);
+}
 .Teaxtaera {
     min-width: 50%;
     min-height: 10vw;
@@ -251,11 +312,40 @@ textarea::placeholder {
     box-shadow: 0px 0px 2px 0px rgba(0, 0, 0, 0.25);
     align-self: flex-start;
     margin-left: 25%;
+    cursor: pointer;
+    transition: all 0.5s ease;
 }
-
+.add:hover {
+    background-color: #B4B4B4;
+    color: #FFFF;
+}
+.nameButton {
+    font-size: 14px;
+    font-family: 'Montserrat';
+    color: #3A3A3A;
+    font-weight: 400;
+}
+.add:hover span {
+    font-size: 14px;
+    font-family: 'Montserrat';
+    font-weight: 400;
+    color: #FFFF;
+}
 .add div {
     color: #3A3A3A;
     font-size: 14px;
+    font-family: 'Montserrat';
+    font-weight: 400;
+}
+
+.add svg {
+    transition: fill 0.3s ease;
+    /* Добавляем анимацию для цвета SVG */
+}
+
+.add:hover svg path {
+    fill: #FFFFFF;
+    /* Меняем цвет SVG при наведении */
 }
 
 mark {
@@ -293,7 +383,7 @@ mark {
     display: none;
     content: '';
     width: 100%;
-    height: 10%;
+    height: 15%;
     position: absolute;
     bottom: -50%;
     left: 0;
