--- a/src/UI/app/PostPage/PostNew.module.css
+++ b/src/UI/app/PostPage/PostNew.module.css
@@ -202,7 +202,7 @@ input[type="search"]::-webkit-input-placeholder {
 }
 
 .productTeaxtaera:before {
-    content: 'Продукт поста';
+    content: 'Продукт поста *';
     position: absolute;
     color: black;
     font-weight: 600;
@@ -210,7 +210,6 @@ input[type="search"]::-webkit-input-placeholder {
     font-size: 12px;
     left: 26.5%;
 }
-
 .destinyTeaxtaera {
     width: 100%;
     position: relative;
@@ -220,7 +219,7 @@ input[type="search"]::-webkit-input-placeholder {
 }
 
 .destinyTeaxtaera:before {
-    content: 'Предназначение поста';
+    content: 'Предназначение поста *';
     position: absolute;
     color: black;
     font-weight: 600;
@@ -228,7 +227,6 @@ input[type="search"]::-webkit-input-placeholder {
     font-size: 12px;
     left: 26.5%;
 }
-
 .Teaxtaera {
     width: 50%;
     min-height: 10vh;
