--- a/src/UI/app/ProjectPage/ProjectNew.module.css
+++ b/src/UI/app/ProjectPage/ProjectNew.module.css
@@ -82,7 +82,7 @@ input[type="search"]::-webkit-input-placeholder {
 }
 
 .spanPomoshnik::after {
-    content: 'ПРОГРАММЫ И ПРОЕКТЫ';
+    content: 'СОЗДАТЬ ПРОГРАММЫ И ПРОЕКТЫ';
     white-space: nowrap;
     position: absolute;
     left: 0;
@@ -279,6 +279,28 @@ input[type="search"]::-webkit-input-placeholder {
     display: block;
 }
 
+.iconSave{
+    position: relative;
+    margin-left: auto;
+}
+
+.iconSave:hover::after {
+    content: "Сохранить";
+    white-space: nowrap;
+    position: absolute;
+    width: 80px;
+    height: 20px;
+    bottom: -120%;
+    left: -120%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #3A3A3A;
+    background-color: white;
+    border-radius: 10px;
+    box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.5);
+    z-index: 1000;
+}
 .image:hover {
     background-color: rgb(240, 240, 240);
     border-radius: 20%;
@@ -326,55 +348,6 @@ input[type="search"]::-webkit-input-placeholder {
     flex-direction: column;
     align-items: center;
     row-gap: 3%;
-}
-
-.actionButton{
-    margin-left: auto;
-    display: flex;
-    column-gap: 20px;
-}
-
-.iconAdd{
-    position: relative;
-  
-}
-
-.iconAdd:hover::after {
-    content: "Создать";
-    white-space: nowrap;
-    position: absolute;
-    width: 80px;
-    height: 20px;
-    bottom: -120%;
-    left: -120%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    color: #3A3A3A;
-    background-color: white;
-    border-radius: 10px;
-    box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.5);
-}
-
-.iconSave{
-    position: relative;
-}
-
-.iconSave:hover::after {
-    content: "Сохранить";
-    white-space: nowrap;
-    position: absolute;
-    width: 80px;
-    height: 20px;
-    bottom: -120%;
-    left: -120%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    color: #3A3A3A;
-    background-color: white;
-    border-radius: 10px;
-    box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.5);
 }
 
 .table {
