--- a/src/UI/app/StrategPage/StrategNew.module.css
+++ b/src/UI/app/StrategPage/StrategNew.module.css
@@ -82,7 +82,7 @@ input[type="search"]::-webkit-input-placeholder {
 }
 
 .spanPomoshnik::after {
-    content: 'СТРАТЕГИЯ';
+    content: 'СОЗДАТЬ СТРАТЕГИЮ';
     white-space: nowrap;
     position: absolute;
     left: 0;
@@ -110,16 +110,6 @@ input[type="search"]::-webkit-input-placeholder {
     background-color: rgb(240, 240, 240);
     border-radius: 20%;
     cursor: pointer;
-}
-
-.select {
-    height: auto;
-    cursor: pointer;
-}
-
-.select:hover {
-    background-color: rgb(240, 240, 240);
-    border-radius: 20%;
 }
 
 .blockSelect {
@@ -175,18 +165,7 @@ background-color: rgb(240, 240, 240)
     cursor: pointer;
     margin-left: 2%;
 }
-.select {
-    height: auto;
-    cursor: pointer;
-    position: relative;
-    font-family: 'Montserrat';
-    font-weight: 600;
-}
 
-.select:hover {
-    background-color: rgb(240, 240, 240);
-    border-radius: 20%;
-}
 .date {
     height: 60%;
     display: flex;
@@ -194,9 +173,8 @@ background-color: rgb(240, 240, 240)
     box-shadow: 0px 0px 1px 0px rgba(0, 0, 0, 0.25);
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
-    column-gap: 10px;
     margin-right: 1%;
     margin-left: 2%;
 }
@@ -254,12 +232,26 @@ background-color: rgb(240, 240, 240)
     border-radius: 20%;
     cursor: pointer;
 }
+.select {
+    height: auto;
+    cursor: pointer;
+    position: relative;
+    font-family: 'Montserrat';
+    font-weight: 600;
+}
+
+.select:hover {
+    background-color: rgb(240, 240, 240);
+    border-radius: 20%;
+}
 
 .main {
-    position:relative;
+    position: relative;
     height: 84%;
     max-height: 80vh;
     overflow-y: auto;
+    /* scrollbar-width: thin;
+    scrollbar-color: #005475 #FFFFFF; */
     background-color: #F0F0F0;
     padding-top: 1%;
     padding-bottom: 1%;
@@ -269,7 +261,7 @@ background-color: rgb(240, 240, 240)
     row-gap: 1%;
 }
 
-.Teaxtaera {
+/* .Teaxtaera {
     min-width: 50%;
     min-height: 10vw;
     background-color: #FFFFFF;
@@ -285,4 +277,4 @@ textarea::placeholder {
     font-family: 'Montserrat';
     padding-top: 3%;
     padding-left: 3%;
-}
+} */
