--- a/src/UI/app/GoalPage/NewGoal.module.css
+++ b/src/UI/app/GoalPage/NewGoal.module.css
@@ -82,7 +82,8 @@ input[type="search"]::-webkit-input-placeholder {
 }
 
 .spanPomoshnik::after {
-    content: 'ЦЕЛИ';
+    content: 'СОЗДАТЬ ЦЕЛЬ';
+    white-space: nowrap;
     position: absolute;
     left: 0;
     bottom: -15px;
@@ -229,7 +230,7 @@ background-color: rgb(240, 240, 240)
 }
 .five {
     height: 60%;
-    width: 10%;
+    width: 200px;
     display: flex;
     flex-direction: row;
     box-shadow: 0px 0px 1px 0px rgba(0, 0, 0, 0.25);
@@ -242,7 +243,7 @@ background-color: rgb(240, 240, 240)
 }
 .four {
     height: 60%;
-    width: 75%;
+    width: 150px;
     display: flex;
     flex-direction: row;
     box-shadow: 0px 0px 1px 0px rgba(0, 0, 0, 0.25);
